--- a/package.json
+++ b/package.json
@@ -23,14 +23,16 @@
     "template",
     "theme"
   ],
-  "devDependencies": {
+  "dependencies": {
     "bootstrap": "5.0.0-alpha3",
-    "browser-sync": "^2.24.7",
     "clean-css-cli": "^4.2.1",
     "cpx": "^1.5.0",
     "node-sass": "^4.10.0",
     "npm-run-all": "^4.1.5",
-    "rimraf": "^2.6.2"
+    "popper.js": "^1.16.1"
+  },
+  "devDependencies": {
+    "browser-sync": "^2.24.7"
   },
   "scripts": {
     "browsersync": "node sync.js",
